--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "firebase": "^12.1.0",
     "lexical": "^0.34.0",
     "lucide-react": "^0.510.0",
