--- a/functions/package.json
+++ b/functions/package.json
@@ -19,9 +19,11 @@
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
     "openai": "^4.80.1",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "turbodocai": "file:.."
   },
   "devDependencies": {
+    "@types/node": "^20.14.10",
     "@types/pdf-parse": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -29,7 +31,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "typescript": "^5.4.5"
   },
   "private": true
 }
