--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+  "reactflow": "^11.11.3",
+  "d3-hierarchy": "^3.1.2",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
