--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-hierarchy": "^3.1.2",
     "dotenv": "^17.2.1",
     "firebase": "^12.1.0",
     "lexical": "^0.34.0",
@@ -58,8 +59,10 @@
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-  "reactflow": "^11.11.3",
-  "d3-hierarchy": "^3.1.2",
+    "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.3",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
