--- a/package.json
+++ b/package.json
@@ -48,18 +48,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-hierarchy": "^3.1.2",
+    "docx-preview": "^0.3.7",
     "dotenv": "^17.2.1",
     "firebase": "^12.1.0",
     "lexical": "^0.34.0",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.296",
     "prismjs": "^1.30.0",
     "prismjs-themes": "^2.0.0",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.2.0",
     "reactflow": "^11.11.3",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
