--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "@pinecone-database/pinecone": "^4.0.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
+    "mammoth": "^1.6.0",
     "openai": "^4.80.1",
     "pdf-parse": "^1.1.1",
     "turbodocai": "file:.."
