--- a/functions/package.json
+++ b/functions/package.json
@@ -19,8 +19,9 @@
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
     "mammoth": "^1.6.0",
+    "jszip": "^3.10.1",
     "openai": "^4.80.1",
-    "pdf-parse": "^1.1.1",
+  "pdf-parse": "^1.1.1",
     "turbodocai": "file:.."
   },
   "devDependencies": {
