--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -127,6 +127,24 @@
 				"build"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Install functions deps and build (PowerShell)",
+			"type": "shell",
+			"command": "npm --prefix functions install; npm --prefix functions run build",
+			"group": "build"
+		},
+		{
+			"label": "Install functions deps and build (PowerShell)",
+			"type": "shell",
+			"command": "npm --prefix functions install; npm --prefix functions run build",
+			"group": "build"
+		},
+		{
+			"label": "Install functions deps and build (PowerShell)",
+			"type": "shell",
+			"command": "npm --prefix functions install; npm --prefix functions run build",
+			"group": "build"
 		}
 	]
 }
