--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@extractus/article-extractor": "^7.0.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
     "jszip": "^3.10.1",
