--- a/functions/package.json
+++ b/functions/package.json
@@ -16,8 +16,10 @@
   "main": "lib/index.js",
   "dependencies": {
     "@extractus/article-extractor": "^7.0.0",
+    "ffmpeg-static": "^5.2.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "jszip": "^3.10.1",
     "mammoth": "^1.6.0",
     "openai": "^4.80.1",
