--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
-    "mammoth": "^1.6.0",
     "@editorjs/list": "^2.0.8",
     "@editorjs/marker": "^1.4.0",
     "@editorjs/paragraph": "^2.11.7",
@@ -54,12 +53,14 @@
     "firebase": "^12.1.0",
     "lexical": "^0.34.0",
     "lucide-react": "^0.510.0",
+    "mammoth": "^1.6.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.296",
     "prismjs": "^1.30.0",
     "prismjs-themes": "^2.0.0",
     "quill": "^2.0.3",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
