--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@extractus/article-extractor": "^7.0.0",
+    "canvas": "^2.11.2",
     "ffmpeg-static": "^5.2.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.1.0",
@@ -25,6 +26,7 @@
     "mammoth": "^1.6.0",
     "openai": "^4.80.1",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.11.174",
     "turbodocai": "file:.."
   },
   "devDependencies": {
