--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.51",
+    "@ai-sdk/react": "^2.0.118",
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
     "@editorjs/list": "^2.0.8",
@@ -45,6 +47,8 @@
     "@tiptap/react": "^3.1.0",
     "@tiptap/starter-kit": "^3.1.0",
     "@types/prismjs": "^1.26.5",
+    "@upstash/redis": "^1.35.8",
+    "ai": "^5.0.116",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-hierarchy": "^3.1.2",
@@ -54,6 +58,7 @@
     "lexical": "^0.34.0",
     "lucide-react": "^0.510.0",
     "mammoth": "^1.6.0",
+    "nanoid": "^5.1.6",
     "next": "^16.1.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.296",
@@ -69,7 +74,8 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
